force-app/main/default/objects/Invoice_Entry__c/Invoice_Entry__c.object-meta.xml
<CustomObject>
    <label>Invoice Entry</label>
    <nameField>
        <displayFormat>IE-{000000}</displayFormat>
        <label>Invoice Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>