force-app/main/default/objects/Invoice_Entry__c/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <label>GL Account</label>
    <referenceTo>Inntact_GL_Account__c</referenceTo>
    <relationshipLabel>Invoice Entries</relationshipLabel>
    <relationshipName>Invoice_Entries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>