force-app/main/default/objects/Invoice_Entry__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Invoice Entries</relationshipLabel>
    <relationshipName>Invoice_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>